# sphinx-nested-apidoc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  README.rst  file_path.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/src/: core.rst  index.rst
sphinx_nested_apidoc/: __init__.py  __main__.py  nested.py
src/sphinx_nested_apidoc/: __init__.py  __main__.py  _ext.py  core.py  ext.py  nested.py
tests/: __init__.py  test_core.py
