[tool.poetry]
name = "sphinx-nested-apidoc"
version = "1.2.0"
description = "sphinx-nested-apidoc: When flattened is not enough"
authors = ["Arunanshu Biswas <mydellpc07@gmail.com>"]
license = "MIT"
readme = "README.md"
scripts = {sphinx-nested-apidoc = "sphinx_nested_apidoc.__main__:main"}
repository = "https://github.com/arunanshub/sphinx-nested-apidoc"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Documentation :: Sphinx",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/arunanshub/sphinx-nested-apidoc/issues"
"Changelog" = "https://github.com/arunanshub/sphinx-nested-apidoc/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
hypothesis = "^6.56.1"
pytest = "^7.1.3"
pytest-xdist = "^3.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = ">=2022.9.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
annotated_tag = true
changelog_start_rev = "v0.3.1"
version_files = [
    "pyproject.toml",
    "src/sphinx_nested_apidoc/__init__.py",
]

[tool.pycln]
all = true

[tool.black]
line-length = 79
target-verson = "py38"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 79
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "if typing.TYPE_CHECKING",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
