[project]
authors = [
  {name = "Arunanshu Biswas", email = "mydellpc07@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Documentation :: Sphinx",
]
dependencies = [
  "sphinx>=7.1.2",
]
description = "sphinx-nested-apidoc: When flattened is not enough"
license = {text = "MIT"}
name = "sphinx-nested-apidoc"
readme = "README.rst"
requires-python = ">=3.9"
version = "1.2.6"

[project.urls]
"Bug Tracker" = "https://github.com/arunanshub/sphinx-nested-apidoc/issues"
Changelog = "https://github.com/arunanshub/sphinx-nested-apidoc/blob/master/CHANGELOG.md"
repository = "https://github.com/arunanshub/sphinx-nested-apidoc"

[project.scripts]
sphinx-nested-apidoc = "sphinx_nested_apidoc.__main__:main"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
  "pre-commit>=3.0.0",
  "mypy>=1.3.0",
]
docs = [
  "furo>=2022.9.29",
  "sphinxext-opengraph>=0.9.0",
  "sphinx-copybutton>=0.5.0",
]
test = [
  "hypothesis>=6.56.1",
  "pytest>=7.1.3",
  "pytest-xdist>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.commitizen]
annotated_tag = true
changelog_incremental = true
changelog_start_rev = "v0.3.1"
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "1.2.6"
version_files = [
  "pyproject.toml",
  "src/sphinx_nested_apidoc/__init__.py",
]

[tool.black]
line-length = 79
target-verson = "py38"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING",
  "if typing.TYPE_CHECKING",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"

[tool.ruff]
exclude = [
  "docs",
  "tests",
]
ignore = ["ANN101", "ANN102", "ANN401", "B024", "PLR0913"]
line-length = 79
select = [
  "ANN",
  "B",
  "E",
  "F",
  "W",
  "I",
  "S",
  "RET",
  "EM",
  "UP",
  "C90",
  "PTH",
  "SIM",
  "TCH",
  "PIE",
  "TID",
  "G",
  "PL",
]
target-version = "py38"

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
required-imports = ["from __future__ import annotations"]
